--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,11 @@
       </nav>
     </div>
   </div>
-  <div class="row align-items-center">
-    <div class="col">
+  <div class="row align-items-center" >
+    <div class="col-3 bg-info">
+      <h2>Publicidad</h2>
+    </div>
+    <div class="col bg-danger">
       <car-list></car-list>
     </div>
   </div>
