edit component cars

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,1 +1,8 @@
-<p>cars works!</p>
+<div class="row align-items-center" >
+    <div class="col-3 bg-info">
+        <h2>Publicidad</h2>
+    </div>
+    <div class="col bg-danger">
+        <car-list></car-list>
+    </div>
+</div>
