--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,14 +19,7 @@
       </nav>
     </div>
   </div>
-  <div class="row align-items-center" >
-    <div class="col-3 bg-info">
-      <h2>Publicidad</h2>
-    </div>
-    <div class="col bg-danger">
-      <car-list></car-list>
-    </div>
-  </div>
+  <cars></cars>
   <div class="row align-items-end">
     <div class="col">
       <div class="container">
