--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,14 +12,16 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Cars</a>
               <a class="nav-link" href="#">Brand</a>
-              <a class="nav-link disabled">A bout</a>
+              <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
             </div>
           </div>
         </div>
       </nav>
     </div>
   </div>
-  <cars></cars>
+  <router-outlet></router-outlet>
+  <!-- <cars></cars> -->
+  <!-- <about-us></about-us> -->
   <div class="row align-items-end">
     <div class="col">
       <div class="container">
