edit component about-us

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,5 @@
-<p>about-us works!</p>
+<div class="row align-items-center" >
+    <div class="col-12 bg-info">
+        <h2>GAMA multimarcas</h2>
+    </div>
+</div>
