--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -11,12 +11,12 @@
   </thead>
   <tbody>
     <tr *ngFor="let car of cars">
-      <td>{{car.brand | uppercase}}</td>
+      <td>{{car.brandname | uppercase}}</td>
       <td>{{car.model}}</td>
       <td>{{car.year}}</td>
       <td>{{car.color}}</td>
       <td>{{car.price | currency}}</td>
-      <td><img [src]="car.image" [alt]="car.brand"></td>
+      <td><img [src]="car.image" [alt]="car.brandname"></td>
     </tr>
   </tbody>
 </table>
