table of the component brand

--- a/src/app/brand-list/brand-list.component.html
+++ b/src/app/brand-list/brand-list.component.html
@@ -1,1 +1,18 @@
-<p>brand-list works!</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Brand</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>{{brand.id}}</td>
+            <td>{{brand.brand}}</td>
+        </tr>
+      <!-- <tr *ngFor="let car of cars">
+        <td>{{car.brandname | uppercase}}</td>
+        <td>{{car.model}}</td>
+      </tr> -->
+    </tbody>
+</table>
