--- a/src/app/brand-list/brand-list.component.html
+++ b/src/app/brand-list/brand-list.component.html
@@ -6,13 +6,9 @@
       </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr *ngFor="let brand of brands">
             <td>{{brand.id}}</td>
-            <td>{{brand.brand}}</td>
+            <td>{{brand.brand | uppercase}}</td>
         </tr>
-      <!-- <tr *ngFor="let car of cars">
-        <td>{{car.brandname | uppercase}}</td>
-        <td>{{car.model}}</td>
-      </tr> -->
     </tbody>
 </table>
