--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Cars</a>
-              <a class="nav-link" href="#">Brand</a>
+              <a class="nav-link" [routerLink]="['/cars']">Cars</a>
+              <a class="nav-link" [routerLink]="['/brands']">Brand</a>
               <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
             </div>
           </div>
