--- a/src/app/brands/brands.component.html
+++ b/src/app/brands/brands.component.html
@@ -1,6 +1,7 @@
 <div class="row align-items-center" >    
     <div class="col bg-danger">
         <brand-list></brand-list>
+        <create-brands></create-brands>
     </div>
     <div class="col-3 bg-info">
         <h2>Publicidad</h2>
