edit id the brand

--- a/src/app/create-brands/create-brands.component.html
+++ b/src/app/create-brands/create-brands.component.html
@@ -1,8 +1,8 @@
 <form [formGroup]="brandForm" (ngSubmit)="createBrand()">
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label for="id" class="form-label">Id</label>
       <input type="number" class="form-control" id="id" formControlName="id">
-    </div>
+    </div> -->
     <div class="mb-3">
       <label for="brand" class="form-label">Brand</label>
       <input type="text" class="form-control" id="brand" formControlName="brand">
