edit layout and add image in navbar

--- a/src/app/brands/brands.component.html
+++ b/src/app/brands/brands.component.html
@@ -1,9 +1,9 @@
 <div class="row align-items-center" >    
-    <div class="col bg-danger">
-        <brand-list></brand-list>
-        <create-brands></create-brands>
+    <div class="col">
+        <brand-list></brand-list>        
     </div>
-    <div class="col-3 bg-info">
-        <h2>Publicidad</h2>
+    <div class="col-3">
+        <h2>Marcas</h2>
+        <create-brands></create-brands>
     </div>
 </div>
