--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,9 +1,8 @@
 <div class="row align-items-center" >
-    <div class="col-3 bg-info">
-        <h2>Publicidad</h2>
+    <div class="col">
+        <car-list></car-list>        
     </div>
-    <div class="col bg-danger">
-        <car-list></car-list>
+    <div class="col-3">
         <create-cars></create-cars>
     </div>
 </div>
