--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="col">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#"><img src="assets/logo.jpg" alt="Gama Multimarcas"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,18 +22,11 @@
   <router-outlet></router-outlet>
   <!-- <cars></cars> -->
   <!-- <about-us></about-us> -->
-  <div class="row align-items-end">
+  <div class="row align-items-end footer">
     <div class="col">
       <div class="container">
-        <footer class="py-3 my-4">
-          <!-- <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-          </ul> -->
-          <p class="text-center text-muted">© {{year}} Company, Inc</p>
+        <footer class="py-3 my-4" >
+          <p class="text-center text-light">© {{year}} Company, Inc</p>
         </footer>
       </div>
     </div>  
