--- a/src/app/create-cars/create-cars.component.html
+++ b/src/app/create-cars/create-cars.component.html
@@ -1,3 +1,4 @@
+<h2>Add car</h2>
 <form [formGroup]="carForm" (ngSubmit)="createCar()">
     <div class="mb-3">
       <label for="brandname" class="form-label">brandname</label>
@@ -16,8 +17,8 @@
       <input type="text" class="form-control" id="color" formControlName="color">
     </div>
     <div class="mb-3">
-        <label for="price" class="form-label">price</label>
-        <input type="number" class="form-control" id="price" formControlName="price">
+      <label for="price" class="form-label">price</label>
+      <input type="number" class="form-control" id="price" formControlName="price">
     </div>
     <div class="mb-3">
       <label for="brandId" class="form-label">Brands</label>
@@ -25,10 +26,5 @@
         <option *ngFor="let brand of brands" [value]="brand.id">{{brand.brand}}</option>
       </select>
     </div>
-
-    <!-- <div class="mb-3">
-        <label for="image" class="form-label">image</label>
-        <input type="text" class="form-control" id="image" formControlName="image">
-    </div> -->
     <button type="submit" class="btn btn-primary">crear</button>
 </form>
