cambio nombre de campo brand por trademark de la entidad y componente  BRAND

--- a/src/app/create-cars/create-cars.component.html
+++ b/src/app/create-cars/create-cars.component.html
@@ -23,7 +23,7 @@
     <div class="mb-3">
       <label for="brandId" class="form-label">Brands</label>
       <select class="form-control" name="brandId" id="brandId" formControlName="brandId">
-        <option *ngFor="let brand of brands" [value]="brand.id">{{brand.brand}}</option>
+        <option *ngFor="let brand of brands" [value]="brand.id">{{brand.trademark}}</option>
       </select>
     </div>
     <button type="submit" class="btn btn-primary">crear</button>
