--- a/src/app/brand-list/brand-list.component.html
+++ b/src/app/brand-list/brand-list.component.html
@@ -8,7 +8,7 @@
     <tbody>
         <tr *ngFor="let brand of brands">
             <td>{{brand.id}}</td>
-            <td>{{brand.brand | uppercase}}</td>
+            <td>{{brand.trademark | uppercase}}</td>
         </tr>
     </tbody>
 </table>
