cambio nombre de campo brand por trademark en el event binding de crear marca

--- a/src/app/create-brands/create-brands.component.html
+++ b/src/app/create-brands/create-brands.component.html
@@ -4,8 +4,8 @@
       <input type="number" class="form-control" id="id" formControlName="id">
     </div> -->
     <div class="mb-3">
-      <label for="brand" class="form-label">Brand</label>
-      <input type="text" class="form-control" id="brand" formControlName="brand">
+      <label for="trademark" class="form-label">Brand</label>
+      <input type="text" class="form-control" id="trademark" formControlName="trademark">
     </div>
-    <button type="submit" class="btn btn-primary">crear</button>
+    <button type="submit" class="btn btn-primary">Add</button>
 </form>
