Edicion en titulo de navbar y elimine comentarios de llamdo componentes CARS y ABOUT-US

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" [routerLink]="['/cars']">Cars</a>
-              <a class="nav-link" [routerLink]="['/brands']">Brand</a>
+              <a class="nav-link" [routerLink]="['/brands']">Brands</a>
               <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
             </div>
           </div>
@@ -20,8 +20,6 @@
     </div>
   </div>
   <router-outlet></router-outlet>
-  <!-- <cars></cars> -->
-  <!-- <about-us></about-us> -->
   <div class="row align-items-end footer">
     <div class="col">
       <div class="container">
