--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,35 @@
-.footer{
+.navbar{
+    position: relative;
+    min-height: 100%;
+}
+
+.verde {background-color: green;
+}
+
+.amarillo {background-color: yellow;
+}
+
+.navbar,footer{
     background-color: rgb(139, 0, 0);
 }
 
+.navbar-nav a{
+    color:white;
+}
+
+.content{
+  position: relative;
+  min-height: 100%;
+}
+
+.footer{
+    background-color: rgb(139, 0, 0);    
+    height:50px;
+    line-height:50px;
+    background:black;
+    text-align:center;
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;    
+}
