modificaciones en el componente principal, dejo como comentario por si acaso

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,37 @@
-<div class="container">
+<div class="container-fluid verde">
+  <div class="row align-items-start">
+    <div class="col">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href=#><img src={{imglogo}} alt={{logo}}></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" [routerLink]="['/cars']">Cars</a>
+              <a class="nav-link" [routerLink]="['/brands']">Brands</a>
+              <a class="nav-link" [routerLink]="['/about-us']">About Us</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+  <div class="row align-items-end">
+    <div class="col">
+        <div class="container-fluid footer">
+          <footer>
+            <p class="text-center text-light"> © {{year}} Company, Inc </p>
+          </footer>
+        </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container pintu">
   <div class="row align-items-start">
     <div class="col">
       <nav class="navbar navbar-expand-lg bg-light">
@@ -29,4 +62,4 @@
       </div>
     </div>  
   </div>
-</div>
+</div> -->
