prueba de estilos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,9 @@
       </nav>
     </div>
   </div>
-  <router-outlet></router-outlet>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>  
   <div class="row align-items-end">
     <div class="col">
         <div class="container-fluid footer">
