--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,5 @@
+
 .navbar{
-    position: relative;
-    min-height: 100%;
-}
-
-.verde {background-color: green;
-}
-
-.amarillo {background-color: yellow;
-}
-
-.navbar,footer{
     background-color: rgb(139, 0, 0);
 }
 
@@ -20,10 +10,10 @@
 .content{
   position: relative;
   min-height: 100%;
+  background-color: red;
 }
 
 .footer{
-    background-color: rgb(139, 0, 0);    
     height:50px;
     line-height:50px;
     background:black;
@@ -31,5 +21,4 @@
     position:absolute;
     bottom:0;
     left:0;
-    width:100%;    
 }
