--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid verde">
+<div class="container-fluid">
   <div class="row align-items-start">
     <div class="col">
       <nav class="navbar navbar-expand-lg">
@@ -23,13 +23,11 @@
     <router-outlet></router-outlet>
   </div>  
   <div class="row align-items-end">
-    <div class="col">
         <div class="container-fluid footer">
           <footer>
             <p class="text-center text-light"> © {{year}} Company, Inc </p>
           </footer>
         </div>
-    </div>
   </div>
 </div>
 
