--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,8 +9,8 @@
 
 .content{
   position: relative;
-  min-height: 100%;
   background-color: red;
+  min-height: calc(100vh - 100px - 50px);
 }
 
 .footer{
@@ -18,7 +18,6 @@
     line-height:50px;
     background:black;
     text-align:center;
-    position:absolute;
     bottom:0;
     left:0;
 }
