Ediciones sobre componente brands

--- a/src/app/brands/brands.component.html
+++ b/src/app/brands/brands.component.html
@@ -1,9 +1,10 @@
-<div class="row align-items-center" >    
-    <div class="col">
-        <brand-list></brand-list>        
-    </div>
-    <div class="col-3">
-        <h2>Marcas</h2>
-        <create-brands></create-brands>
+<div class="container-fluid">
+    <div class="row align-items-center" >    
+        <div class="col">
+            <brand-list></brand-list>        
+        </div>
+        <div class="col-3">
+            <create-brands></create-brands>
+        </div>
     </div>
 </div>
