--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -1,23 +1,29 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Brand</th>
-      <th scope="col">Model</th>
-      <th scope="col">Year</th>
-      <th scope="col">Color</th>
-      <th scope="col">Price</th>
-      <th scope="col">Image</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let car of cars">
-      <td>{{car.brandname | uppercase}}</td>
-      <td>{{car.model}}</td>
-      <td>{{car.year}}</td>
-      <td>{{car.color}}</td>
-      <td>{{car.price | currency}}</td>
-      <td><img [src]="car.image" [alt]="car.brandname"></td>
-    </tr>
-  </tbody>
-</table>
-
+<div class="container-fluid table-cars-list">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Actions</th>
+        <th scope="col">Brand</th>
+        <th scope="col">Model</th>
+        <th scope="col">Year</th>
+        <th scope="col">Color</th>
+        <th scope="col">Price</th>
+        <th scope="col">Image</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let car of cars">
+        <td class="size-table-actions">
+          <button type="button" class="btn me-md-2 btn-danger btn-sm">Delete</button>
+          <button type="button" class="btn me-md-2 btn-danger btn-sm">Modify</button>
+        </td>
+        <td>{{car.brandname | uppercase}}</td>
+        <td>{{car.model}}</td>
+        <td>{{car.year}}</td>
+        <td>{{car.color}}</td>
+        <td>{{car.price | currency}}</td>
+        <td><img [src]="car.image" [alt]="car.brandname"></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
