A REVISAR - lo use para ubicar la tabla arriba. OJO

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,8 +1,10 @@
-<div class="row align-items-center" >
-    <div class="col">
-        <car-list></car-list>        
-    </div>
-    <div class="col-3">
-        <create-cars></create-cars>
+<div class="container-fluid">
+    <div class="row align-items-center" >
+        <div class="col list-cars">
+            <car-list></car-list>        
+        </div>
+        <div class="col-3">
+            <create-cars></create-cars>
+        </div>
     </div>
 </div>
