--- a/src/app/create-cars/create-cars.component.html
+++ b/src/app/create-cars/create-cars.component.html
@@ -1,10 +1,10 @@
 
 <div class="container-fluid">
   <form [formGroup]="carForm" (ngSubmit)="createCar()" class="form-create-cars">
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label for="brandname" class="form-label">brandname</label>
       <input type="text" class="form-control form-control-sm" id="brandname" formControlName="brandname">
-    </div>
+    </div> -->
     <div class="mb-3">
       <label for="model" class="form-label">MODEL</label>
       <input type="text" class="form-control form-control-sm" id="model" formControlName="model">
