--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -8,7 +8,7 @@
         <th scope="col">Year</th>
         <th scope="col">Color</th>
         <th scope="col">Price</th>
-        <th scope="col">Image</th>
+        <!-- <th scope="col">Image</th> -->
       </tr>
     </thead>
     <tbody>
@@ -22,7 +22,7 @@
         <td>{{car.year}}</td>
         <td>{{car.color}}</td>
         <td>{{car.price | currency}}</td>
-        <td><img [src]="car.image" [alt]=""></td>
+        <!-- <td><img [src]="car.image" [alt]=""></td> -->
       </tr>
     </tbody>
   </table>
