Contenido en componente About-us

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,5 +1,12 @@
-<div class="row align-items-center" >
-    <div class="col-12 bg-info">
-        <h2>GAMA multimarcas</h2>
+<div class="container-fluid">
+    <div class="row align-items-center" >
+        <div class="starter-template">
+            <h1>GAMA multimarcas</h1>
+            <h4>Acerca de AutoEstilo: Nuestra Historia y Compromiso</h4>
+            <p class="lead">En AutoEstilo, nuestra pasión por los autos va más allá de la venta: nos dedicamos a proporcionar experiencias excepcionales a nuestros clientes desde 1991. Con una trayectoria sólida en el mercado automotriz, nos enorgullecemos de ser un referente en la industria.</p>
+            <h4>Ven y Descubre la Diferencia:</h4>
+            <p class="lead">Estamos ubicados en Tandil, donde esperamos ansiosamente conocerte. Visítanos hoy mismo y descubre por qué AutoEstilo es más que una concesionaria; somos un lugar donde tus sueños automotrices cobran vida.</p>
+            <span>Marconi 1305, Tandil, Argentina, 7000</span>
+        </div>
     </div>
 </div>
