estilos del template principal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,5 @@ html, body {
     margin:0;
     padding:0;
     height:100%;
-    background-color: greenyellow;
+    background-color: rgb(224, 213, 213);
 }
