--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -3,7 +3,7 @@
     <thead>
       <tr>
         <th scope="col">Actions</th>
-        <!-- <th scope="col">Brand</th> -->
+        <th scope="col">Brand</th> 
         <th scope="col">Model</th>
         <th scope="col">Year</th>
         <th scope="col">Color</th>
@@ -17,7 +17,7 @@
           <button type="button" class="btn me-md-2 btn-danger btn-sm">Delete</button>
           <button type="button" class="btn me-md-2 btn-danger btn-sm">Modify</button>
         </td>
-        <!-- <td>{{car.brandname | uppercase}}</td> -->
+        <td>{{car.brandname | uppercase}}</td>
         <td>{{car.model}}</td>
         <td>{{car.year}}</td>
         <td>{{car.color}}</td>
