modificacion campo brand

--- a/src/app/car-list/car-list.component.html
+++ b/src/app/car-list/car-list.component.html
@@ -17,7 +17,7 @@
           <button type="button" class="btn me-md-2 btn-danger btn-sm">Delete</button>
           <button type="button" class="btn me-md-2 btn-danger btn-sm">Modify</button>
         </td>
-        <td>{{car.brandname | uppercase}}</td>
+        <td>{{car.brand.trademark | uppercase}}</td> 
         <td>{{car.model}}</td>
         <td>{{car.year}}</td>
         <td>{{car.color}}</td>
