--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
     </div>
   </div>
   <div class="content">
+    <span>dealership app is running!</span>
     <router-outlet></router-outlet>
   </div>  
   <div class="row align-items-end">
